corpus/objects.txt
================================================================================
Label
================================================================================
<foo_bar-baz:.quux>
--------------------------------------------------------------------------------

(source_file
  (markup
    (label)))

================================================================================
Label without text
================================================================================
<>
--------------------------------------------------------------------------------

(source_file
  (ERROR
    (embedded_code_stmt_end)))

================================================================================
Reference
================================================================================
@foo_bar-baz:.quux
--------------------------------------------------------------------------------

(source_file
  (markup
    (reference)))

================================================================================
Reference with trailing punctuation
================================================================================
@foo_bar-baz:.
--------------------------------------------------------------------------------

(source_file
  (markup
    (reference)
    (text)
    (text)))

================================================================================
Reference with content block
================================================================================
@foo[hello world]
--------------------------------------------------------------------------------

(source_file
  (markup
    (reference
      (content_block
        (content_block_open)
        (markup
          (text))
        (content_block_close)))))

================================================================================
Reference without text
================================================================================
@
--------------------------------------------------------------------------------

(source_file
  (ERROR
    (embedded_code_stmt_end)))

================================================================================
Text ending with @
================================================================================
test@
--------------------------------------------------------------------------------

(source_file
  (markup
    (text)))

================================================================================
Heading
================================================================================
= Foo Bar
--------------------------------------------------------------------------------

(source_file
  (markup
    (heading
      (heading_start)
      (markup
        (text)))))

================================================================================
Heading without text
================================================================================
=
--------------------------------------------------------------------------------

(source_file
  (markup
    (heading
      (heading_start))))

================================================================================
Heading without text, but a space
================================================================================
= 
--------------------------------------------------------------------------------

(source_file
  (markup
    (heading
      (heading_start))))

================================================================================
Heading with text around it
================================================================================
Hello world
= Foo Bar
Bar Baz
--------------------------------------------------------------------------------

(source_file
  (markup
    (text)
    (heading
      (heading_start)
      (markup
        (text)))
    (text)))

================================================================================
Indented heading
================================================================================
    = Heading
--------------------------------------------------------------------------------

(source_file
  (markup
    (heading
      (heading_start)
      (markup
        (text)))))

================================================================================
Comment before heading
================================================================================
/**/= Heading
--------------------------------------------------------------------------------

(source_file
  (markup
    (block_comment)
    (heading
      (heading_start)
      (markup
        (text)))))

================================================================================
Comment plus space before heading
================================================================================
/**/ = Heading
--------------------------------------------------------------------------------

(source_file
  (markup
    (block_comment)
    (heading
      (heading_start)
      (markup
        (text)))))

================================================================================
Content block with content with heading
================================================================================
#[= heading]
--------------------------------------------------------------------------------

(source_file
  (markup
    (embedded_code_expr
      (content_block
        (content_block_open)
        (markup
          (heading
            (heading_start)
            (markup
              (text))))
        (content_block_close)))))

================================================================================
Not a heading
================================================================================
Text == Not a heading
--------------------------------------------------------------------------------

(source_file
  (markup
    (text)
    (text)
    (text)
    (text)))

================================================================================
Non-text character before heading
================================================================================
] = Not a heading
--------------------------------------------------------------------------------

(source_file
  (markup
    (text)
    (text)
    (text)))

================================================================================
Content block before heading
================================================================================
#[] = Not a heading
--------------------------------------------------------------------------------

(source_file
  (markup
    (embedded_code_expr
      (content_block
        (content_block_open)
        (content_block_close)))
    (text)
    (text)))

================================================================================
Text before multi-line block comment before heading
================================================================================
test /*
*/ = Not a heading
--------------------------------------------------------------------------------

(source_file
  (markup
    (text)
    (block_comment)
    (text)
    (text)))

================================================================================
Strong heading
================================================================================
*
= Foo
*
--------------------------------------------------------------------------------

(source_file
  (markup
    (strong
      (markup
        (heading
          (heading_start)
          (markup
            (text)))))))

================================================================================
Consecutive headings
================================================================================
= Foo
= Bar
--------------------------------------------------------------------------------

(source_file
  (markup
    (heading
      (heading_start)
      (markup
        (text)))
    (heading
      (heading_start)
      (markup
        (text)))))

================================================================================
Heading with multiple markup expressions
================================================================================
= Foo *strong* https://example.com
New line
--------------------------------------------------------------------------------

(source_file
  (markup
    (heading
      (heading_start)
      (markup
        (text)
        (strong
          (markup
            (text)))
        (link)))
    (text)))
